@@ -119,3 +119,4 @@ STR_DOM_MISSIONSTRING_PRISONERS
 STR_DOM_MISSIONSTRING_2033
 STR_DOM_MISSIONSTRING_2034
 STR_DOM_MISSIONSTRING_2035
+STR_DOM_MISSIONSTRING_2036
