@@ -8,3 +8,4 @@ STR_DOM_MISSIONSTRING_2028_INFANTRY
 STR_DOM_MISSIONSTRING_2028_RABBIT
 STR_DOM_MISSIONSTRING_2034
 STR_DOM_MISSIONSTRING_2035
+STR_DOM_MISSIONSTRING_2036
