@@ -4,3 +4,4 @@ STR_DOM_MISSIONSTRING_400_VERYHIGH
 STR_DOM_MISSIONSTRING_722_GENERIC_NAME
 STR_DOM_MISSIONSTRING_1987
 STR_DOM_MISSIONSTRING_2028_RABBIT
+STR_DOM_MISSIONSTRING_2036
